--- a/SetGame/Base.lproj/Main.storyboard
+++ b/SetGame/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="Stack View standard spacing" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -51,12 +52,11 @@
                                     </label>
                                 </subviews>
                             </stackView>
-                            <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="875-vo-cbS">
-                                <rect key="frame" x="97" y="44" width="220" height="168"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="center" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="875-vo-cbS">
+                                <rect key="frame" x="16" y="44" width="382" height="168"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="1zA-J4-H2X">
-                                        <rect key="frame" x="0.0" y="0.0" width="220" height="36"/>
+                                        <rect key="frame" x="81" y="0.0" width="220" height="36"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="characterWrap" translatesAutoresizingMaskIntoConstraints="NO" id="o2O-CI-oQh">
                                                 <rect key="frame" x="0.0" y="0.0" width="30" height="36"/>
@@ -109,7 +109,7 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="N7Y-ff-O8V">
-                                        <rect key="frame" x="0.0" y="44" width="220" height="36"/>
+                                        <rect key="frame" x="81" y="44" width="220" height="36"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="characterWrap" translatesAutoresizingMaskIntoConstraints="NO" id="JbA-r5-ceE">
                                                 <rect key="frame" x="0.0" y="0.0" width="30" height="36"/>
@@ -162,7 +162,7 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="UTU-Kz-wqe">
-                                        <rect key="frame" x="0.0" y="88" width="220" height="36"/>
+                                        <rect key="frame" x="81" y="88" width="220" height="36"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="characterWrap" translatesAutoresizingMaskIntoConstraints="NO" id="Tjc-Ax-q7n">
                                                 <rect key="frame" x="0.0" y="0.0" width="30" height="36"/>
@@ -215,7 +215,7 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="odE-1V-GZx">
-                                        <rect key="frame" x="0.0" y="132" width="220" height="36"/>
+                                        <rect key="frame" x="81" y="132" width="220" height="36"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="characterWrap" translatesAutoresizingMaskIntoConstraints="NO" id="4YP-iM-Aj8">
                                                 <rect key="frame" x="0.0" y="0.0" width="30" height="36"/>
@@ -275,6 +275,9 @@
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="dju-3d-BLC" secondAttribute="trailing" constant="87" id="Dra-Kw-NoU"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="dju-3d-BLC" secondAttribute="bottom" constant="15" id="KYU-sh-lRC"/>
                             <constraint firstItem="dju-3d-BLC" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="88" id="a6M-Bk-00f"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="875-vo-cbS" secondAttribute="trailing" constant="16" id="d5w-Wm-SWo"/>
+                            <constraint firstItem="875-vo-cbS" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="nlJ-WN-HFn"/>
+                            <constraint firstItem="875-vo-cbS" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="uhK-j0-XW9"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
